# election-scraping

./: README.md  pyproject.toml
data/: consolidated_data.csv  data_2016.csv  data_2020.csv  data_2024.csv
scripts/: scrape_wi.py
