[tool.poetry]
name = "election-scraping"
version = "0.0.1"
description = "Scraping 2024 election results."
authors = ["Michealngelo D'Agostino <mdagost@gmail.com>"]
readme = "README.md"
packages = [{include = "election_scraping"}]
repository = "https://github.com/mdagost/election-scraping"

# Requirements
[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.48.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"